--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2151,8 +2151,12 @@ ul.wp-block-latest-posts.is-grid.alignwide {
     top: 0px;
     z-index: 1; }
   .navbar-area .nav-container {
-    background-color: transparent;
-    max-width: 97%; }
+    /*background-color: transparent;
+    max-width: 97%;*/
+    background-color: #29292ad1;
+    max-width: 100%;
+    position: fixed;
+    top: inherit; }
     .navbar-area .nav-container .logo a {
       font-family: var(--body-font);
       font-size: 33px; }
@@ -2354,8 +2358,13 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   .navbar-area .logo {
     padding-top: 15px; }
   .navbar-area .nav-container {
-    position: relative;
-    z-index: 0; }
+   /* position: relative;
+    z-index: 0;*/ 
+    position: fixed;
+    z-index: 0;
+    max-width: 100%;
+
+  }
     .navbar-area .nav-container .navbar-brand {
       display: block; }
       .navbar-area .nav-container .navbar-brand .navbar-toggler {
@@ -3952,7 +3961,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
       line-height: 100px; }
     .home-rolling .rolling-content p {
       color: var(--paragraph-color);
-      font-size: 18px;
+      font-size: 23px;
       letter-spacing: 0.025em;
       font-weight: 400;
       line-height: 35px;
@@ -8378,7 +8387,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   font-weight: 300;
   letter-spacing: 0.55px;
   font-family: var(--body-font);
-  line-height: 50px; }
+  line-height: 30px; }
   .popover-element .list-menu li i {
     color: var(--main-color);
     margin-right: 20px; }
