--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2556,7 +2556,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
     .banner-area .social-icon .icon-list:last-child {
       margin-right: 0; }
     .banner-area .social-icon .icon-text {
-      font-size: 40px;
+      font-size: 35px;
       line-height: 30px;
       -webkit-transition: all 0.3s ease;
       -o-transition: all 0.3s ease;
@@ -4406,7 +4406,8 @@ ul.wp-block-latest-posts.is-grid.alignwide {
       width: 20%;
       top: -15px; }
   .customer-area .quote-slider {
-    background: url("../img/home1/customer.png");
+   /* background: url("../img/home1/customer.png");*/
+   background-color: #43305673;
     padding: 85px 0px 115px 0px;
     margin-top: 100px;
     background-position: 70px 0px;
@@ -7497,11 +7498,11 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 
 .btn-style-2 {
   background: transparent;
-  border: 1px solid var(--main-color);
+  border: 3px solid var(--main-color);
   color: var(--main-color);
   -webkit-box-shadow: none;
   box-shadow: none;
-  font-weight: 400;
+  font-weight: 600;
   -webkit-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease; }
