--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7501,8 +7501,8 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 
 .btn-style-2 {
   background: transparent;
-  border: 3px solid var(--main-color);
-  color: var(--main-color);
+  border: 3px solid #e51a22;
+    color: #fff;
   -webkit-box-shadow: none;
   box-shadow: none;
   font-weight: 600;
@@ -7512,7 +7512,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   .btn-style-2:hover {
     -webkit-box-shadow: none;
     box-shadow: none;
-    background: var(--main-color);
+    background: #e51a22;
     -webkit-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
@@ -8874,7 +8874,7 @@ ul.wp-block-latest-posts.is-grid.alignwide {
   -webkit-box-shadow: -2px 0px 8px 0px rgba(0, 0, 0, 0.16);
   box-shadow: -2px 0px 8px 0px rgba(0, 0, 0, 0.16); }
   .floating-icon__is {
-    padding: 5px 14px;
+    padding: 14px 14px;
     -webkit-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease; }
